--- a/src/compets.pug
+++ b/src/compets.pug
@@ -12,9 +12,9 @@ html(lang="en")
             +header 
             main.main 
                 include components/intro 
-                +internal-intro
+                +compets-intro
                 include components/teachers
-                +ultimate-teachers 
+                +compets-teachers 
                 include components/people
                 +people
                 include components/tutorial
