--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -19,7 +19,7 @@ mixin header()
                     a(href="rates.html").header__link Повышение квалификации 
                     a(href="retraining.html").header__link Профессиональная переподготовка
                     a(href="olympiads.html").header__link Олимпиады
-                    a(href="#!").header__link Конкурсы
+                    a(href="compets.html").header__link Конкурсы
             .header__right 
                 a(href="tel:+88003505464").header__tel 8 (800) 350-54-64
                 p.header__right-p звонок бесплатный
