--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,7 @@
     'layout/tutorial',
     'layout/diplomas',
     'layout/templates',
+    'layout/themes',
     'layout/forms';
 
 // components
