--- a/src/compets.pug
+++ b/src/compets.pug
@@ -15,6 +15,8 @@ html(lang="en")
                 +compets-intro
                 include components/teachers
                 +compets-teachers 
+                include components/themes
+                +themes 
                 include components/people
                 +people
                 include components/tutorial
