--- a/src/compets.pug
+++ b/src/compets.pug
@@ -18,13 +18,15 @@ html(lang="en")
                 include components/themes
                 +themes 
                 include components/people
-                +people
+                +compets-people
                 include components/tutorial
-                +internal-tutorial
-                include components/diplomas
-                +diplomas
+                +compets-tutorial
+                include components/training
+                +olympiads-training
+                include components/diplomas 
+                +diplomas 
                 include components/samples 
-                +olympiads-samples 
+                +compets-samples
                 include components/calc 
                 +olympiads-calc
                 include components/templates 
