--- a/src/scss/layout/_people.scss
+++ b/src/scss/layout/_people.scss
@@ -3,6 +3,17 @@
     @include media(575){
         @include resa('padding-bottom', 30px);
     }
+    &__compets{
+        .people{
+            &__title{
+                text-transform: uppercase;
+                @include res('max-width', 750px);
+                @include media(575){
+                    max-width: 100%;
+                }
+            }
+        }
+    }
     &__title{
         position: relative;
         @include res('padding-top', 58px);
@@ -24,6 +35,9 @@
             font-weight: 700;
             @include resa('padding-top', 20px);
             @include resa('padding-bottom', 40px);
+        }
+        span{
+            color: #325CFE;
         }
         &::before{
             content: '';
