--- a/src/components/samples.pug
+++ b/src/components/samples.pug
@@ -88,3 +88,32 @@ mixin compets-samples()
                             p.samples__desc Выбираете внешний вид диплома #[br] в личном кабинете
                 button(type="button").samples__btn Выбрать тему олимпиады
 
+mixin songs-samples()
+    .samples.samples__olympiads
+        .samples__body.container 
+            h2.samples__title 3 #[span простых шага] для участия #[br] в КОНКУРСЕ и #[span получения диплома :]
+            .samples__content 
+                .samples__wrapper
+                    .samples__row 
+                        .samples__left 
+                            p.samples__p 1 шаг
+                            p.samples__subtitle Заполнить #[span заявку]
+                        .samples__right 
+                            p.samples__txt Займет 1 мин
+                            p.samples__desc Заполняете все поля специльной #[br] формы, прикрепляете работу
+                    .samples__row 
+                        .samples__left 
+                            p.samples__p Займет до 2 ч
+                            p.samples__subtitle Ждёте #[span личный результат]
+                        .samples__right
+                            p.samples__txt Займет 1 мин 
+                            p.samples__desc Мы сообщим Вам результат конкурса #[br] в течение 2-х часов на ваш e-mail
+                    .samples__row
+                        .samples__left 
+                            p.samples__p 3 шаг
+                            p.samples__subtitle Получаете #[span диплом]
+                        .samples__right.gray  
+                            p.samples__txt После прохождения конкурса
+                            p.samples__desc Выбираете внешний вид диплома #[br] в личном кабинете
+                button(type="button").samples__btn Выбрать тему олимпиады
+
