--- a/src/components/diplomas.pug
+++ b/src/components/diplomas.pug
@@ -7,3 +7,13 @@ mixin diplomas()
                     img(src="@img/diplomas-girl.png", alt="" draggable="false")
                 .diplomas__img 
                     img(src="@img/diplomas-img.png", alt="" draggable="false")
+
+mixin songs-diplomas()
+    .diplomas
+        .diplomas__body.container 
+            h2.diplomas__title Участвуйте в #[span КОНКУРСАХ] #[br] и получайте дипломы победителей
+            .diplomas__row  
+                .diplomas__girl 
+                    img(src="@img/diplomas-girl.png", alt="" draggable="false")
+                .diplomas__img 
+                    img(src="@img/diplomas-img.png", alt="" draggable="false")
