--- a/src/components/teachers.pug
+++ b/src/components/teachers.pug
@@ -59,7 +59,7 @@ mixin ratesTeachers()
                             p.teachers__subtitle ДистанционноЕ ОБУЧЕНИЕ
                         p.teachers__desc Обучение проводится с использованием дистанционных технологий. В выдаваемых документах форма обучения не указываются.  
                         p.teachers__desc Обучайтесь в любое удобное время и получите документы не отличающиеся от документов при очном обучении.
-            h2.teachers__title НАМ ДОВЕРЯЮТ БОЛЕЕ  #[span 300 000] КВАЛИФИЦИРОВАННЫХ  ПЕДАГОГОВ И ВОСПИТАТЕЛЕЙ, ВЕДЬ У НАС:
+            h2.teachers__title У НАС ВЫ НАЙДЕТЕ БОЛЕЕ  #[span 3 000] КУРСОВ ПОВЫШЕНИЯ КВАЛИФИКАЦИИ ПО РАЗЛИЧНЫМ НАПРАВЛЕНИЯМ:
 
 
 mixin olympiadsTeachers()
@@ -241,4 +241,4 @@ mixin songs-teachers()
                                     a(href="#!").teachers__right-link Создать диплом
                                 .teachers__diploma
                                     img(src="@img/compets-img.png", alt="" draggable="false") 
-                p.teachers__p #[span.bold АКЦИЯ:] Каждый #[span третий] диплом в подарок! Действует только до #[span 28 марта]! 
+                p.teachers__p #[span.bold АКЦИЯ:] Каждый #[span третий] диплом в подарок! Действует только до #[span 28 марта]!
