--- a/src/publications.pug
+++ b/src/publications.pug
@@ -14,7 +14,7 @@ html(lang="en")
                 include components/intro 
                 +publications-intro
                 include components/teachers
-                +olympiadsTeachers 
+                +teachers 
                 include components/category
                 +category
                 include components/people
